--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- link style -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-<!--  fontawesome link -->
-<script src="https://kit.fontawesome.com/d305426e2b.js" crossorigin="anonymous"></script>
+  <!--  fontawesome link -->
+  <script src="https://kit.fontawesome.com/d305426e2b.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -19,18 +19,88 @@
   <header>
     <h1 class="font-medium text-4xl text-center"> Ai Universe Hub</h1>
   </header>
-
+  <div class="text-center">
+    <button class="bg-danger border-0 rounded p-2 my-3  text-white">Sort By Date</button>
+  </div>
   <main>
- 
-    <section>
-      <div id="hub-container" class="row row-cols-1 row-cols-md-3 g-4">
-     
-
+    <!-- loader spinner -->
+    <section id="loader" class="d-none">
+      <div style="height: 400px;" class="d-flex align-items-center justify-content-center ">
+        <div class="spinner-border text-warning" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </div>
     </section>
+    <!-- Modal- Part -->
+    <section>
+      <!-- Modal -->
+      <div class="modal fade" id="ai-details" tabindex="-1" aria-labelledby="ai-detailsLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close bg-danger rounded-circle" data-bs-dismiss="modal"
+                aria-label="Close"></button>
+            </div>
+            <div class="modal-body d-flex">
+              <!-- details-part -->
+              <div id="ai-details" class="bg-danger-subtle">
+                <p>
+                  details
+                </p>
+                <div class="pricing d-flex">
+                  <div>10</div>
+                  <div>20</div>
+                  <div>40</div>
+                </div>
+                <div class="feature-intigration d-flex">
+                  <div class="featre">
+                    <h3>Features</h3>
+                    <ul>
+                      <li>Customizable responses </li>
+                      <li>Multilingual support</li>
+                      <li> Seamless integration</li>
+                    </ul>
+                  </div>
+                  <div class="intigreation">
+                    <h3>Features</h3>
+                    <ul>
+                      <li>Customizable responses </li>
+                      <li>Multilingual support</li>
+                      <li> Seamless integration</li>
+                    </ul>
+                  </div>
+
+                </div>
+              </div>
+              <!-- image-part -->
+              <div>
+                image
+                <h2>Hi, how are you doing today?</h2>
+                <p>I'm doing well, thank you for asking. How can I assist you today?</p>
+              </div>
+
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- All-Card -->
+    <section>
+      <div id="hub-container" class="row row-cols-1 row-cols-md-3 g-4">
+
+
+      </div>
+      </section>
+    <div id="see-more" class="text-center d-none">
+      <button id="btn-see-more" class="bg-danger border-0 rounded p-2 my-3  text-white">See More</button>
+    </div>
   </main>
 
   <!-- Js link -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
   <script src="js/data.js"></script>
 </body>
 
