--- a/index.html
+++ b/index.html
@@ -35,49 +35,63 @@
     <section>
       <!-- Modal -->
       <div class="modal fade" id="ai-details" tabindex="-1" aria-labelledby="ai-detailsLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-dialog modal-dialog-centered  modal-lg">
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="btn-close bg-danger rounded-circle" data-bs-dismiss="modal"
                 aria-label="Close"></button>
             </div>
-            <div class="modal-body d-flex">
-              <!-- details-part -->
-              <div id="ai-details" class="bg-danger-subtle">
-                <p>
-                  details
-                </p>
-                <div class="pricing d-flex">
-                  <div>10</div>
-                  <div>20</div>
-                  <div>40</div>
-                </div>
-                <div class="feature-intigration d-flex">
-                  <div class="featre">
-                    <h3>Features</h3>
-                    <ul>
-                      <li>Customizable responses </li>
-                      <li>Multilingual support</li>
-                      <li> Seamless integration</li>
-                    </ul>
-                  </div>
-                  <div class="intigreation">
-                    <h3>Features</h3>
-                    <ul>
-                      <li>Customizable responses </li>
-                      <li>Multilingual support</li>
-                      <li> Seamless integration</li>
-                    </ul>
-                  </div>
+            <div id="display-ai-details" class="modal-body d-flex justify-content-between p-5  ">
 
+              <!-- <div class=" border mb-3 " style="max-width: 18rem;">
+                <div class="header  ">
+                <p> ${Ai.data.description}</p>
+                </div>
+                <div class="body d-flex ">
+                <div class="p-4" >
+                ${Ai.data.pricing[0].plan}
+                ${Ai.data.pricing[0].price}
+               </div>
+               <div class="p-4">
+                ${Ai.data.pricing[1].plan}
+               ${Ai.data.pricing[1].price}
+               </div>
+               <div class="p-4">
+                ${Ai.data.pricing[2].plan}
+               ${Ai.data.pricing[2].price}
+               </div>
+                </div>
+                <div class="footer d-flex ">
+                <div class="features">
+                  <h3>Features</h3>
+                  <ul>
+                    <li>${Ai.data.features.feature_name} </li>
+                    <li>Multilingual support</li>
+                    <li> Seamless integration</li>
+                  </ul>
+                </div>
+                <div class="Integrations">
+                  <h3>Integrations</h3>
+                  <ul>
+                    <li>${Ai.data.integrations[0]} </li>
+                    <li>${Ai.data.integrations[1]}</li>
+                    <li> ${Ai.data.integrations[2]}</li>
+                  </ul>
+                </div>
                 </div>
               </div>
-              <!-- image-part -->
-              <div>
-                image
-                <h2>Hi, how are you doing today?</h2>
-                <p>I'm doing well, thank you for asking. How can I assist you today?</p>
+             banner
+              <div class="card h-100 p-3 rounded"> 
+                <img src="${Ai.data.image_link} " class="card-img-top" alt="...">
+                <div >
+                  <h2> ${Ai.data.input_output_examples[0].input}</h2>
+                  <p>${Ai.data.input_output_examples[0].output}</p>
+                </div>
+              -->
               </div>
+              
+
+
 
             </div>
 
@@ -91,7 +105,7 @@
 
 
       </div>
-      </section>
+    </section>
     <div id="see-more" class="text-center d-none">
       <button id="btn-see-more" class="bg-danger border-0 rounded p-2 my-3  text-white">See More</button>
     </div>
