--- a/index.html
+++ b/index.html
@@ -33,68 +33,18 @@
     </section>
     <!-- Modal- Part -->
     <section>
-      <!-- Modal -->
       <div class="modal fade" id="ai-details" tabindex="-1" aria-labelledby="ai-detailsLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered  modal-lg">
+          <!-- modal- content -->
           <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header border-0 ">
               <button type="button" class="btn-close bg-danger rounded-circle" data-bs-dismiss="modal"
                 aria-label="Close"></button>
             </div>
-            <div id="display-ai-details" class="modal-body d-flex justify-content-between p-5  ">
-
-              <!-- <div class=" border mb-3 " style="max-width: 18rem;">
-                <div class="header  ">
-                <p> ${Ai.data.description}</p>
-                </div>
-                <div class="body d-flex ">
-                <div class="p-4" >
-                ${Ai.data.pricing[0].plan}
-                ${Ai.data.pricing[0].price}
-               </div>
-               <div class="p-4">
-                ${Ai.data.pricing[1].plan}
-               ${Ai.data.pricing[1].price}
-               </div>
-               <div class="p-4">
-                ${Ai.data.pricing[2].plan}
-               ${Ai.data.pricing[2].price}
-               </div>
-                </div>
-                <div class="footer d-flex ">
-                <div class="features">
-                  <h3>Features</h3>
-                  <ul>
-                    <li>${Ai.data.features.feature_name} </li>
-                    <li>Multilingual support</li>
-                    <li> Seamless integration</li>
-                  </ul>
-                </div>
-                <div class="Integrations">
-                  <h3>Integrations</h3>
-                  <ul>
-                    <li>${Ai.data.integrations[0]} </li>
-                    <li>${Ai.data.integrations[1]}</li>
-                    <li> ${Ai.data.integrations[2]}</li>
-                  </ul>
-                </div>
-                </div>
-              </div>
-             banner
-              <div class="card h-100 p-3 rounded"> 
-                <img src="${Ai.data.image_link} " class="card-img-top" alt="...">
-                <div >
-                  <h2> ${Ai.data.input_output_examples[0].input}</h2>
-                  <p>${Ai.data.input_output_examples[0].output}</p>
-                </div>
-              -->
-              </div>
-              
-
-
+            <!-- modal-body -->
+            <div id="display-ai-details" class="modal-body row row-cols-1 row-cols-md-2 g-4 row-cols-lg-2   p-5  ">
 
             </div>
-
           </div>
         </div>
       </div>
