--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Universe Hub</title>
   <!-- link style -->
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   <!--  fontawesome link -->
@@ -19,8 +20,9 @@
   <header>
     <h1 class="font-medium text-4xl text-center"> Ai Universe Hub</h1>
   </header>
+  <!-- sort by date button -->
   <div class="text-center">
-    <button class="bg-danger border-0 rounded p-2 my-3  text-white">Sort By Date</button>
+    <button id="sort-button" class="bg-danger border-0 rounded p-2 my-3  text-white">Sort By Date</button>
   </div>
   <main>
     <!-- loader spinner -->
@@ -56,9 +58,17 @@
 
       </div>
     </section>
+
+    <!-- see more button -->
+
     <div id="see-more" class="text-center d-none">
       <button id="btn-see-more" class="bg-danger border-0 rounded p-2 my-3  text-white">See More</button>
     </div>
+
+
+
+
+
   </main>
 
   <!-- Js link -->
